src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones :
   3               | definiciones definicion

   4  definicion : definicionVariableGlobal
   5             | definicionEstructura
   6             | definicionFuncion

   7  definicionVariableGlobal : "VAR" "IDENT" ':' tipo ';'

   8  tipo : "INT"
   9       | "REAL"
  10       | "CHAR"
  11       | "IDENT"
  12       | '[' "LITERALINT" ']' tipo

  13  definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' ';'

  14  cuerpoEstructura :
  15                   | cuerpoEstructura variableEstructura

  16  variableEstructura : "IDENT" ':' tipo ';'

  17  definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariables sentencias '}'

  18  retorno :
  19          | ':' tipo

  20  definicionesVariables :
  21                        | definicionesVariables definicionVariableLocal

  22  definicionVariableLocal : "VAR" "IDENT" ':' tipo ';'

  23  parametros :
  24             | parametrosAux

  25  parametrosAux : definicionParametro
  26                | parametrosAux ',' definicionParametro

  27  definicionParametro : "IDENT" ':' tipo

  28  sentencias :
  29             | sentencias sentencia

  30  sentencia : expresion '=' expresion ';'
  31            | "RETURN" expresion ';'
  32            | "RETURN" ';'
  33            | "RETURN" "NULL" ';'
  34            | "PRINTSP" expresion ';'
  35            | "PRINTLN" expresion ';'
  36            | "PRINTLN" ';'
  37            | "PRINT" expresion ';'
  38            | "READ" expresion ';'
  39            | invocacionSentencia ';'
  40            | bucleWhile
  41            | branch

  42  invocacionSentencia : "IDENT" '(' parametrosUtilizados ')'

  43  bucleWhile : "WHILE" '(' expresion ')' '{' sentencias '}'

  44  branch : "IF" '(' expresion ')' '{' sentencias '}'
  45         | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'

  46  expresion : "IDENT"
  47            | "LITERALINT"
  48            | "LITERALREAL"
  49            | "LITERALCHAR"
  50            | '-' "LITERALINT"
  51            | '-' "LITERALREAL"
  52            | '(' expresion ')'
  53            | expresion '[' expresion ']'
  54            | expresion '.' "IDENT"
  55            | expresion '*' expresion
  56            | expresion '/' expresion
  57            | expresion '+' expresion
  58            | expresion '-' expresion
  59            | expresion "AND" expresion
  60            | expresion "OR" expresion
  61            | expresion "MENORIGUAL" expresion
  62            | expresion "DISTINTO" expresion
  63            | expresion "MAYORIGUAL" expresion
  64            | expresion "IGUALA" expresion
  65            | expresion '<' expresion
  66            | expresion '>' expresion
  67            | '!' expresion
  68            | invocacionExpresion
  69            | cast

  70  invocacionExpresion : "IDENT" '(' parametrosUtilizados ')'

  71  cast : "CAST" '<' tipo '>' '(' expresion ')'

  72  parametrosUtilizados :
  73                       | parametrosUtilizadosAux

  74  parametrosUtilizadosAux : expresion
  75                          | parametrosUtilizadosAux ',' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariableGlobal  goto 7
	definicionEstructura  goto 8
	definicionFuncion  goto 9


state 3
	definicionVariableGlobal : "VAR" . "IDENT" ':' tipo ';'  (7)

	"IDENT"  shift 10
	.  error


state 4
	definicionFuncion : "IDENT" . '(' parametros ')' retorno '{' definicionesVariables sentencias '}'  (17)

	'('  shift 11
	.  error


state 5
	definicionEstructura : "STRUCT" . "IDENT" '{' cuerpoEstructura '}' ';'  (13)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : definicionVariableGlobal .  (4)

	.  reduce 4


state 8
	definicion : definicionEstructura .  (5)

	.  reduce 5


state 9
	definicion : definicionFuncion .  (6)

	.  reduce 6


state 10
	definicionVariableGlobal : "VAR" "IDENT" . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionFuncion : "IDENT" '(' . parametros ')' retorno '{' definicionesVariables sentencias '}'  (17)
	parametros : .  (23)

	"IDENT"  shift 14
	')'  reduce 23

	parametros  goto 15
	parametrosAux  goto 16
	definicionParametro  goto 17


state 12
	definicionEstructura : "STRUCT" "IDENT" . '{' cuerpoEstructura '}' ';'  (13)

	'{'  shift 18
	.  error


state 13
	definicionVariableGlobal : "VAR" "IDENT" ':' . tipo ';'  (7)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24


state 14
	definicionParametro : "IDENT" . ':' tipo  (27)

	':'  shift 25
	.  error


state 15
	definicionFuncion : "IDENT" '(' parametros . ')' retorno '{' definicionesVariables sentencias '}'  (17)

	')'  shift 26
	.  error


state 16
	parametros : parametrosAux .  (24)
	parametrosAux : parametrosAux . ',' definicionParametro  (26)

	','  shift 27
	')'  reduce 24


state 17
	parametrosAux : definicionParametro .  (25)

	.  reduce 25


state 18
	definicionEstructura : "STRUCT" "IDENT" '{' . cuerpoEstructura '}' ';'  (13)
	cuerpoEstructura : .  (14)

	.  reduce 14

	cuerpoEstructura  goto 28


state 19
	tipo : '[' . "LITERALINT" ']' tipo  (12)

	"LITERALINT"  shift 29
	.  error


state 20
	tipo : "IDENT" .  (11)

	.  reduce 11


state 21
	tipo : "INT" .  (8)

	.  reduce 8


state 22
	tipo : "REAL" .  (9)

	.  reduce 9


state 23
	tipo : "CHAR" .  (10)

	.  reduce 10


state 24
	definicionVariableGlobal : "VAR" "IDENT" ':' tipo . ';'  (7)

	';'  shift 30
	.  error


state 25
	definicionParametro : "IDENT" ':' . tipo  (27)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 31


state 26
	definicionFuncion : "IDENT" '(' parametros ')' . retorno '{' definicionesVariables sentencias '}'  (17)
	retorno : .  (18)

	':'  shift 32
	'{'  reduce 18

	retorno  goto 33


state 27
	parametrosAux : parametrosAux ',' . definicionParametro  (26)

	"IDENT"  shift 14
	.  error

	definicionParametro  goto 34


state 28
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura . '}' ';'  (13)
	cuerpoEstructura : cuerpoEstructura . variableEstructura  (15)

	"IDENT"  shift 35
	'}'  shift 36
	.  error

	variableEstructura  goto 37


state 29
	tipo : '[' "LITERALINT" . ']' tipo  (12)

	']'  shift 38
	.  error


state 30
	definicionVariableGlobal : "VAR" "IDENT" ':' tipo ';' .  (7)

	.  reduce 7


state 31
	definicionParametro : "IDENT" ':' tipo .  (27)

	.  reduce 27


state 32
	retorno : ':' . tipo  (19)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 39


state 33
	definicionFuncion : "IDENT" '(' parametros ')' retorno . '{' definicionesVariables sentencias '}'  (17)

	'{'  shift 40
	.  error


state 34
	parametrosAux : parametrosAux ',' definicionParametro .  (26)

	.  reduce 26


state 35
	variableEstructura : "IDENT" . ':' tipo ';'  (16)

	':'  shift 41
	.  error


state 36
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' . ';'  (13)

	';'  shift 42
	.  error


state 37
	cuerpoEstructura : cuerpoEstructura variableEstructura .  (15)

	.  reduce 15


state 38
	tipo : '[' "LITERALINT" ']' . tipo  (12)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 43


state 39
	retorno : ':' tipo .  (19)

	.  reduce 19


state 40
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' . definicionesVariables sentencias '}'  (17)
	definicionesVariables : .  (20)

	.  reduce 20

	definicionesVariables  goto 44


state 41
	variableEstructura : "IDENT" ':' . tipo ';'  (16)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 45


state 42
	definicionEstructura : "STRUCT" "IDENT" '{' cuerpoEstructura '}' ';' .  (13)

	.  reduce 13


state 43
	tipo : '[' "LITERALINT" ']' tipo .  (12)

	.  reduce 12


state 44
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariables . sentencias '}'  (17)
	definicionesVariables : definicionesVariables . definicionVariableLocal  (21)
	sentencias : .  (28)

	"VAR"  shift 46
	'-'  reduce 28
	'!'  reduce 28
	'('  reduce 28
	"IDENT"  reduce 28
	"LITERALINT"  reduce 28
	'}'  reduce 28
	"RETURN"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"PRINT"  reduce 28
	"READ"  reduce 28
	"WHILE"  reduce 28
	"IF"  reduce 28
	"LITERALREAL"  reduce 28
	"LITERALCHAR"  reduce 28
	"CAST"  reduce 28

	sentencias  goto 47
	definicionVariableLocal  goto 48


state 45
	variableEstructura : "IDENT" ':' tipo . ';'  (16)

	';'  shift 49
	.  error


state 46
	definicionVariableLocal : "VAR" . "IDENT" ':' tipo ';'  (22)

	"IDENT"  shift 50
	.  error


state 47
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariables sentencias . '}'  (17)
	sentencias : sentencias . sentencia  (29)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 54
	"LITERALINT"  shift 55
	'}'  shift 56
	"RETURN"  shift 57
	"PRINTSP"  shift 58
	"PRINTLN"  shift 59
	"PRINT"  shift 60
	"READ"  shift 61
	"WHILE"  shift 62
	"IF"  shift 63
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	sentencia  goto 67
	expresion  goto 68
	invocacionSentencia  goto 69
	bucleWhile  goto 70
	branch  goto 71
	invocacionExpresion  goto 72
	cast  goto 73


state 48
	definicionesVariables : definicionesVariables definicionVariableLocal .  (21)

	.  reduce 21


state 49
	variableEstructura : "IDENT" ':' tipo ';' .  (16)

	.  reduce 16


state 50
	definicionVariableLocal : "VAR" "IDENT" . ':' tipo ';'  (22)

	':'  shift 74
	.  error


state 51
	expresion : '-' . "LITERALINT"  (50)
	expresion : '-' . "LITERALREAL"  (51)

	"LITERALINT"  shift 75
	"LITERALREAL"  shift 76
	.  error


state 52
	expresion : '!' . expresion  (67)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 78
	invocacionExpresion  goto 72
	cast  goto 73


state 53
	expresion : '(' . expresion ')'  (52)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 79
	invocacionExpresion  goto 72
	cast  goto 73


state 54
	invocacionSentencia : "IDENT" . '(' parametrosUtilizados ')'  (42)
	expresion : "IDENT" .  (46)
	invocacionExpresion : "IDENT" . '(' parametrosUtilizados ')'  (70)

	'('  shift 80
	"OR"  reduce 46
	"AND"  reduce 46
	"DISTINTO"  reduce 46
	"IGUALA"  reduce 46
	"MENORIGUAL"  reduce 46
	"MAYORIGUAL"  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'['  reduce 46
	'.'  reduce 46
	'='  reduce 46


state 55
	expresion : "LITERALINT" .  (47)

	.  reduce 47


state 56
	definicionFuncion : "IDENT" '(' parametros ')' retorno '{' definicionesVariables sentencias '}' .  (17)

	.  reduce 17


state 57
	sentencia : "RETURN" . expresion ';'  (31)
	sentencia : "RETURN" . ';'  (32)
	sentencia : "RETURN" . "NULL" ';'  (33)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	';'  shift 81
	"LITERALINT"  shift 55
	"NULL"  shift 82
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 83
	invocacionExpresion  goto 72
	cast  goto 73


state 58
	sentencia : "PRINTSP" . expresion ';'  (34)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 84
	invocacionExpresion  goto 72
	cast  goto 73


state 59
	sentencia : "PRINTLN" . expresion ';'  (35)
	sentencia : "PRINTLN" . ';'  (36)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	';'  shift 85
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 86
	invocacionExpresion  goto 72
	cast  goto 73


state 60
	sentencia : "PRINT" . expresion ';'  (37)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 87
	invocacionExpresion  goto 72
	cast  goto 73


state 61
	sentencia : "READ" . expresion ';'  (38)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	.  error

	expresion  goto 88
	invocacionExpresion  goto 72
	cast  goto 73


state 62
	bucleWhile : "WHILE" . '(' expresion ')' '{' sentencias '}'  (43)

	'('  shift 89
	.  error


state 63
	branch : "IF" . '(' expresion ')' '{' sentencias '}'  (44)
	branch : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (45)

	'('  shift 90
	.  error


state 64
	expresion : "LITERALREAL" .  (48)

	.  reduce 48


state 65
	expresion : "LITERALCHAR" .  (49)

	.  reduce 49


state 66
	cast : "CAST" . '<' tipo '>' '(' expresion ')'  (71)

	'<'  shift 91
	.  error


state 67
	sentencias : sentencias sentencia .  (29)

	.  reduce 29


state 68
	sentencia : expresion . '=' expresion ';'  (30)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)

	"OR"  shift 92
	"AND"  shift 93
	"DISTINTO"  shift 94
	"IGUALA"  shift 95
	"MENORIGUAL"  shift 96
	"MAYORIGUAL"  shift 97
	'<'  shift 98
	'>'  shift 99
	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'['  shift 104
	'.'  shift 105
	'='  shift 106
	.  error


state 69
	sentencia : invocacionSentencia . ';'  (39)

	';'  shift 107
	.  error


state 70
	sentencia : bucleWhile .  (40)

	.  reduce 40


state 71
	sentencia : branch .  (41)

	.  reduce 41


state 72
	expresion : invocacionExpresion .  (68)

	.  reduce 68


state 73
	expresion : cast .  (69)

	.  reduce 69


state 74
	definicionVariableLocal : "VAR" "IDENT" ':' . tipo ';'  (22)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 108


state 75
	expresion : '-' "LITERALINT" .  (50)

	.  reduce 50


state 76
	expresion : '-' "LITERALREAL" .  (51)

	.  reduce 51


state 77
	expresion : "IDENT" .  (46)
	invocacionExpresion : "IDENT" . '(' parametrosUtilizados ')'  (70)

	'('  shift 109
	"OR"  reduce 46
	"AND"  reduce 46
	"DISTINTO"  reduce 46
	"IGUALA"  reduce 46
	"MENORIGUAL"  reduce 46
	"MAYORIGUAL"  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	')'  reduce 46
	'['  reduce 46
	']'  reduce 46
	'.'  reduce 46
	';'  reduce 46
	','  reduce 46
	'='  reduce 46


state 78
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)
	expresion : '!' expresion .  (67)

	'['  shift 104
	'.'  shift 105
	"OR"  reduce 67
	"AND"  reduce 67
	"DISTINTO"  reduce 67
	"IGUALA"  reduce 67
	"MENORIGUAL"  reduce 67
	"MAYORIGUAL"  reduce 67
	'<'  reduce 67
	'>'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	')'  reduce 67
	']'  reduce 67
	';'  reduce 67
	','  reduce 67
	'='  reduce 67


state 79
	expresion : '(' expresion . ')'  (52)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)

	"OR"  shift 92
	"AND"  shift 93
	"DISTINTO"  shift 94
	"IGUALA"  shift 95
	"MENORIGUAL"  shift 96
	"MAYORIGUAL"  shift 97
	'<'  shift 98
	'>'  shift 99
	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	')'  shift 110
	'['  shift 104
	'.'  shift 105
	.  error


state 80
	invocacionSentencia : "IDENT" '(' . parametrosUtilizados ')'  (42)
	invocacionExpresion : "IDENT" '(' . parametrosUtilizados ')'  (70)
	parametrosUtilizados : .  (72)

	'-'  shift 51
	'!'  shift 52
	'('  shift 53
	"IDENT"  shift 77
	"LITERALINT"  shift 55
	"LITERALREAL"  shift 64
	"LITERALCHAR"  shift 65
	"CAST"  shift 66
	')'  reduce 72

	expresion  goto 111
	parametrosUtilizados  goto 112
	invocacionExpresion  goto 72
	cast  goto 73
	parametrosUtilizadosAux  goto 113


state 81
	sentencia : "RETURN" ';' .  (32)

	.  reduce 32


state 82
	sentencia : "RETURN" "NULL" . ';'  (33)

	';'  shift 114
	.  error


state 83
	sentencia : "RETURN" expresion . ';'  (31)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)

	"OR"  shift 92
	"AND"  shift 93
	"DISTINTO"  shift 94
	"IGUALA"  shift 95
	"MENORIGUAL"  shift 96
	"MAYORIGUAL"  shift 97
	'<'  shift 98
	'>'  shift 99
	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'['  shift 104
	'.'  shift 105
	';'  shift 115
	.  error


state 84
	sentencia : "PRINTSP" expresion . ';'  (34)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)

	"OR"  shift 92
	"AND"  shift 93
	"DISTINTO"  shift 94
	"IGUALA"  shift 95
	"MENORIGUAL"  shift 96
	"MAYORIGUAL"  shift 97
	'<'  shift 98
	'>'  shift 99
	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'['  shift 104
	'.'  shift 105
	';'  shift 116
	.  error


state 85
	sentencia : "PRINTLN" ';' .  (36)

	.  reduce 36


state 86
	sentencia : "PRINTLN" expresion . ';'  (35)
	expresion : expresion . '[' expresion ']'  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . "AND" expresion  (59)
	expresion : expresion . "OR" expresion  (60)
	expresion : expresion . "MENORIGUAL" expresion  (61)
	expresion : expresion . "DISTINTO" expresion  (62)
	expresion : expresion . "MAYORIGUAL" expresion  (63)
	expresion : expresion . "IGUALA" expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '>' expresion  (66)
